#
# Top-level Makefile
# (c) Massachusetts Institute of Technology, 2020
# The contents of the package Copyright statement apply here.
#

SUBDIRS = texcheck covertest tasking develplan geodetic requirements \
	  specification testreports userman common texmiss

EXTRA_DIST = docs-manifest.txt \
	developer/autotools.txt developer/layout.txt
	developer/readme.txt developer/style.txt

#
# eof
#
