#configure environment set-up script
find_program (BASH_PROGRAM bash REQUIRED)
find_program (TAR_PROGRAM tar REQUIRED)

if(BASH_PROGRAM)

    #install the script used to manually download the test data
    configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/testdata_download_all.sh.in ${CMAKE_CURRENT_BINARY_DIR}/testdata_download_all.sh @ONLY)
    install( PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/testdata_download_all.sh DESTINATION ${BIN_INSTALL_DIR} )

    set(DATA_TARBALL ${CMAKE_CURRENT_BINARY_DIR}/hops4_testdata.tar.gz)

    add_test(NAME TESTDATA_COPY
      COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/hops4_testdata.tar.gz ${DATA_TARBALL}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )

    set(DATA_TARBALL_AE ${CMAKE_CURRENT_BINARY_DIR}/ae_testdata.tar.gz)

    add_test(NAME TESTDATA_AE_COPY
      COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/ae_testdata.tar.gz ${DATA_TARBALL_AE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )

    set(DATA_TARBALL2 ${CMAKE_CURRENT_BINARY_DIR}/3764.tar.gz)

    if (DEFINED ENV{HOPS_CICD_KEY})
        add_test(NAME TESTDATA2_COPY
          COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/3764.tar.gz ${DATA_TARBALL2}
          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
    endif()

    set(DATA_TARBALL3 ${CMAKE_CURRENT_BINARY_DIR}/3593.tar.gz)

    add_test(NAME TESTDATA3_COPY
      COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/3593.tar.gz ${DATA_TARBALL3}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )

    set(DATA_TARBALL4 ${CMAKE_CURRENT_BINARY_DIR}/3741.tar.gz)

    add_test(NAME TESTDATA4_COPY
      COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/3741.tar.gz ${DATA_TARBALL4}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    
    set(DATA_TARBALL5 ${CMAKE_CURRENT_BINARY_DIR}/3768.tar.gz)

    if (DEFINED ENV{HOPS_CICD_KEY})
        add_test(NAME TESTDATA5_COPY
          COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/3768.tar.gz ${DATA_TARBALL5}
          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
    endif()

    set(DIFX_DATA_TARBALL ${CMAKE_CURRENT_BINARY_DIR}/vt9105.tar.gz)

    add_test(NAME DIFX_TESTDATA_COPY
      COMMAND cp ${HOPS_CACHED_TEST_DATADIR}/vt9105.tar.gz ${DIFX_DATA_TARBALL}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )

    add_test(NAME TESTDATA_UNPACK
        COMMAND ${TAR_PROGRAM} -xzf ${DATA_TARBALL}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    set_tests_properties(TESTDATA_UNPACK PROPERTIES DEPENDS TESTDATA_COPY)

    add_test(NAME TESTDATA_AE_UNPACK
        COMMAND ${TAR_PROGRAM} -xzf ${DATA_TARBALL_AE}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    set_tests_properties(TESTDATA_AE_UNPACK PROPERTIES DEPENDS TESTDATA_AE_COPY)
    
    if (DEFINED ENV{HOPS_CICD_KEY})
        add_test(NAME TESTDATA2_UNPACK
            COMMAND ${TAR_PROGRAM} -xzf ${DATA_TARBALL2}
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
        set_tests_properties(TESTDATA2_UNPACK PROPERTIES DEPENDS TESTDATA2_COPY)
    endif()
    
    add_test(NAME TESTDATA3_UNPACK
        COMMAND ${TAR_PROGRAM} -xzf ${DATA_TARBALL3}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    set_tests_properties(TESTDATA3_UNPACK PROPERTIES DEPENDS TESTDATA3_COPY)

    add_test(NAME TESTDATA4_UNPACK
        COMMAND ${TAR_PROGRAM} -xzf ${DATA_TARBALL4}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    set_tests_properties(TESTDATA4_UNPACK PROPERTIES DEPENDS TESTDATA4_COPY)

    if (DEFINED ENV{HOPS_CICD_KEY})
        add_test(NAME TESTDATA5_UNPACK
            COMMAND ${TAR_PROGRAM} -xzf ${DATA_TARBALL5}
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        )
        set_tests_properties(TESTDATA5_UNPACK PROPERTIES DEPENDS TESTDATA5_COPY)
    endif()

    add_test(NAME DIFX_TESTDATA_UNPACK
        COMMAND ${TAR_PROGRAM} -xzf ${DIFX_DATA_TARBALL}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
    set_tests_properties(DIFX_TESTDATA_UNPACK PROPERTIES DEPENDS DIFX_TESTDATA_COPY)

    #configure the environment script
    configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/chk_cmake_env.sh ${CMAKE_CURRENT_BINARY_DIR}/chk_env.sh @ONLY)

    add_test(NAME HOPS_ENV_SETUP
        COMMAND ${BASH_PROGRAM} ${CMAKE_CURRENT_BINARY_DIR}/chk_env.sh
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )

endif(BASH_PROGRAM)
