#
# Makefile to collect common tex sources for dist
# (c) Massachusetts Institute of Technology, 2020
# The contents of the package Copyright statement apply here.
#

EXTRA_DIST = $(srcdir)/acronyms.tex $(srcdir)/shortcuts.tex \
	$(srcdir)/hops.bib $(srcdir)/nuHOPStimeline.png \
	$(srcdir)/arch_overview.dia $(srcdir)/arch_overview.png \
	$(srcdir)/ffcore.png $(srcdir)/ffsearch.png \
	$(srcdir)/fourfit.png $(srcdir)/appendix.tex

#
# eof
#
