#
# Makefile to collect common tex sources for dist
# (c) Massachusetts Institute of Technology, 2020-2022
# The contents of the package Copyright statement apply here.
#

EXTRA_DIST = acronyms.tex shortcuts.tex \
	hops.bib nuHOPStimeline.png \
	arch_overview.dia arch_overview.png \
	ffcore.png ffsearch.png \
	fourfit.png \
	uml-diagrams/uml-diagram-examples/class-diagram-example.png \
	uml-diagrams/uml-diagram-examples/uml-description.tex \
	help-with-bib.txt

#
# eof
#
