#
# Makefile to provide some missing texlive files
#
# (c) Massachusetts Institute of Technology, 2020
# The contents of the package Copyright statement apply here.
#

EXTRA_DIST = $(srcdir)/acronym.sty $(srcdir)/biblatex.sty \
	$(srcdir)/logreq.def $(srcdir)/logreq.sty $(srcdir)/outlines.sty

#
# eof
#
